manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: jenkins
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  -
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /jenkins
